@@ -6,6 +6,7 @@ export(OSM_scale_lookup)
 export(XY2LonLat)
 export(bb2bbox)
 export(calc_zoom)
+export(check_google_for_error)
 export(distQueryCheck)
 export(file_drawer)
 export(geocode)
