@@ -9,8 +9,8 @@ get_googlemap(center = c(lon = -95.3632715, lat = 29.7632836), zoom = 10,
   "jpg-baseline", "png32"), maptype = c("terrain", "satellite", "roadmap",
   "hybrid"), language = "en-EN", messaging = FALSE, urlonly = FALSE,
   filename = "ggmapTemp", color = c("color", "bw"), force = FALSE,
-  where = tempdir(), archiving = FALSE, region, markers, path, visible,
-  style, ext = "com", ...)
+  where = tempdir(), archiving = FALSE, ext = "com", inject = "",
+  region, markers, path, visible, style, ...)
 }
 \arguments{
 \item{center}{the center of the map.  Either a longitude/latitude
@@ -62,6 +62,10 @@ you agree to the one of the approved uses listed in the Google
 Maps API Terms of Service :
 http://developers.google.com/maps/terms.}
 
+\item{ext}{domain extension (e.g. "com", "co.nz")}
+
+\item{inject}{character string to add to the url}
+
 \item{region}{borders to display as a region code specified as a
 two-character ccTLD ("top-level domain") value, see
 \url{http://en.wikipedia.org/wiki/List_of_Internet_top-level_domains#Country_code_top-level_domains}}
@@ -84,8 +88,6 @@ map extent}
 for the style argument or a named vector (see examples). this
 is a powerful complex specification, see
 \url{https://developers.google.com/maps/documentation/staticmaps/}}
-
-\item{ext}{domain extension (e.g. "com", "co.nz")}
 
 \item{...}{...}
 }
