@@ -1,6 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/register_google.R
 \name{register_google}
+\alias{check_google_for_error}
 \alias{goog_account}
 \alias{goog_client}
 \alias{goog_day_limit}
@@ -32,6 +33,8 @@ has_signature()
 goog_second_limit()
 
 goog_day_limit()
+
+check_google_for_error(tree)
 }
 \arguments{
 \item{key}{an api key}
@@ -46,6 +49,8 @@ goog_day_limit()
 
 \item{day_limit}{query limit per day (default 2500 for standard
 accounts, 100000 for premium accounts)}
+
+\item{tree}{a json tree from \code{\link{fromJSON}}}
 }
 \description{
 Many features of the Google web mapping services can be improved
